--- a/src/components/VinInput.scss
+++ b/src/components/VinInput.scss
@@ -1,19 +1,39 @@
 $color: #ff9393;
+
 .VinInput {
+    width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2em;
+    color: $color;
+
     input {
-        border-radius: 5px;
+        width: 100%;
+        height: 2.5em;
+        padding: 0 .5em;
+        font-size: 1.6em;
+        border-radius: .2em;
         caret-color: #1056ad;
+        border: 1px solid transparent;
+        background: #f1f1f1;
+
+        &::-webkit-input-placeholder {
+            color: #bbb
+        }
     }
+
     &__Error {
         color: $color;
+        margin-top: 0.6em;
+        font-size: .8em;
+    }
+
+    &--invalid {
+        input {
+            border-color: $color;
+        }
     }
 }
 
-::-webkit-input-placeholder {
-    color: #bbb
-}
 
-*:focus {
-    outline: none;
-}
